# generic-session-types

./: Cargo.toml  LICENSE.md  README.md
src/: lib.rs  mpsc.rs  repr.rs  session.rs  test.rs
src/chan/: mod.rs  mpsc.rs
src/repr/: box_any_repr.rs  json_string_repr.rs  mod.rs
tests/: custom_choice.rs  test.rs  test_def_offer_macro.rs
