[package]
name = "generic-session-types"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Generic session types in Rust for async send recv channel"
homepage = "https://github.com/chnlkw/generic-session-types"
repository = "https://github.com/chnlkw/generic-session-types"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0"}
serde_json = { version = "1.0"}
thiserror = "1.0"

